--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,9 @@ body {
     position:fixed;
     width:60px;
     height:60px;
-    bottom:40px;
+    top:40px;
     right:40px;
-    background-color:#0C9;
+    background-color:#ff2200;
     color:#FFF;
     border-radius:50px;
     text-align:center;
